--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/3-header.css" />
     <link rel="stylesheet" href="styles/3-footer.css" />
     <link rel="stylesheet" href="styles/6-filters.css" />
-    <link rel="stylesheet" href="styles/8-places.css" />
+    <link rel="stylesheet" href="styles/100-places.css" />
     <link rel="icon" href="images/icon.png" />
   </head>
   <body>
@@ -52,7 +52,7 @@
           <div class="places-container">
             <article class="home">
               <div class="home-price">
-                <h2>My home</h2>
+                <h2 class="places-name">My home</h2>
                 <div class="price_by_night">80$</div>
               </div>
               <div class="information">
@@ -85,10 +85,18 @@
                 getaway or an extended stay, our home promises a relaxing and
                 memorable experience.
               </div>
+              <div class="amenities-desc">
+                <h2 class="amenities-title">Amenities</h2>
+                <ul>
+                  <li>TV</li>
+                  <li>WiFi</li>
+                  <li>Pets friendly</li>
+                </ul>
+              </div>
             </article>
             <article class="tiny">
               <div class="home-price">
-                <h2>Tiny house</h2>
+                <h2 class="places-name">Tiny house</h2>
                 <div class="price_by_night">65$</div>
               </div>
               <div class="information">
@@ -116,10 +124,18 @@
                 ideal escape to recharge and reconnect. Embrace the minimalist
                 charm and create lasting memories in this enchanting tiny haven.
               </div>
+              <div class="amenities-desc">
+                <h2 class="amenities-title">Amenities</h2>
+                <ul>
+                  <li>TV</li>
+                  <li>WiFi</li>
+                  <li>Pets friendly</li>
+                </ul>
+              </div>
             </article>
             <article class="suite">
               <div class="home-price">
-                <h2>A suite</h2>
+                <h2 class="places-name">A suite</h2>
                 <div class="price_by_night">190$</div>
               </div>
               <div class="information">
@@ -148,6 +164,14 @@
                 streets. Whether you're here for business or leisure, our suite
                 provides the perfect blend of relaxation and accessibility,
                 ensuring a memorable stay in our vibrant city.
+              </div>
+              <div class="amenities-desc">
+                <h2 class="amenities-title">Amenities</h2>
+                <ul>
+                  <li>TV</li>
+                  <li>WiFi</li>
+                  <li>Pets friendly</li>
+                </ul>
               </div>
             </article>
           </div>
