--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>HBnB</title>
         <meta charset="UTF-8">
     </head>
     <body style="margin: 0; padding: 0; display: flex; flex-direction: column; min-height: 100vh;">
