--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/4-common.css" />
-    <link rel="stylesheet" href="styles/3-header.css" />
-    <link rel="stylesheet" href="styles/3-footer.css" />
-    <link rel="stylesheet" href="styles/6-filters.css" />
-    <link rel="stylesheet" href="styles/100-places.css" />
-    <link rel="icon" href="images/icon.png" />
+    <title>HBnB</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/6-filters.css">
+    <link rel="stylesheet" href="styles/100-places.css">
+    <link rel="icon" href="images/icon.png">
   </head>
   <body>
     <header>
@@ -21,15 +22,15 @@
             <h3 class="heading-m">States</h3>
             <h4 class="heading-s">California,Arizona...</h4>
             <div class="popover">
-              <ul class="popover-ulist">
-                <h2>Arizona:</h2>
-                <li class="popover-list">Page</li>
-                <li class="popover-list">Page2</li>
+              <h2 class="filter-title" >Arizona:</h2>
+              <ul>
+                <li  class="popover-list">Page</li>
+                <li  class="popover-list">Page2</li>
               </ul>
-              <ul class="popover-ulist">
-                <h2>California:</h2>
-                <li class="popover-list">San Francisco</li>
-                <li class="popover-list">Los Altos</li>
+              <h2 class="filter-title">California:</h2>
+              <ul>
+                <li  class="popover-list">San Francisco</li>
+                <li  class="popover-list">Los Altos</li>
               </ul>
             </div>
           </div>
