--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
     <head>
+        <title>HBnB</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="/Projects/AirBnB_clone/web_static/styles/2-common.css">
         <link rel="stylesheet" href="/Projects/AirBnB_clone/web_static/styles/2-header.css">
