--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <title>HBnB</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/4-common.css" />
-    <link rel="stylesheet" href="styles/3-header.css" />
-    <link rel="stylesheet" href="styles/3-footer.css" />
-    <link rel="stylesheet" href="styles/6-filters.css" />
-    <link rel="stylesheet" href="styles/7-places.css" />
-    <link rel="icon" href="images/icon.png" />
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/6-filters.css">
+    <link rel="stylesheet" href="styles/7-places.css">
+    <link rel="icon" href="images/icon.png">
   </head>
   <body>
     <header>
@@ -21,15 +22,15 @@
             <h3 class="heading-m">States</h3>
             <h4 class="heading-s">California,Arizona...</h4>
             <div class="popover">
+              <h2 class="filter-title" >Arizona:</h2>
               <ul>
-                <h2>Arizona:</h2>
-                <li>Page</li>
-                <li>Page2</li>
+                <li  class="popover-list">Page</li>
+                <li  class="popover-list">Page2</li>
               </ul>
+              <h2 class="filter-title">California:</h2>
               <ul>
-                <h2>California:</h2>
-                <li>San Francisco</li>
-                <li>Los Altos</li>
+                <li  class="popover-list">San Francisco</li>
+                <li  class="popover-list">Los Altos</li>
               </ul>
             </div>
           </div>
@@ -37,11 +38,11 @@
             <h3 class="heading-m">Amenities</h3>
             <h4 class="heading-s">Internet,Kitchen...</h4>
             <div class="popover">
-              <ul>
-                <li>Internet</li>
-                <li>Tv</li>
-                <li>Kitchen</li>
-                <li>Iron</li>
+              <ul class="popover-ulist">
+                <li class="popover-list">Internet</li>
+                <li class="popover-list">Tv</li>
+                <li class="popover-list">Kitchen</li>
+                <li class="popover-list">Iron</li>
               </ul>
             </div>
           </div>
