fixing the code

--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <title>HBnB</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/4-common.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="stylesheet" href="styles/6-filters.css">
-    <link rel="stylesheet" href="styles/100-places.css">
-    <link rel="icon" href="images/icon.png">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/4-common.css" />
+    <link rel="stylesheet" href="styles/3-header.css" />
+    <link rel="stylesheet" href="styles/3-footer.css" />
+    <link rel="stylesheet" href="styles/6-filters.css" />
+    <link rel="stylesheet" href="styles/100-places.css" />
+    <link rel="icon" href="images/icon.png" />
   </head>
   <body>
     <header>
@@ -22,15 +22,15 @@
             <h3 class="heading-m">States</h3>
             <h4 class="heading-s">California,Arizona...</h4>
             <div class="popover">
-              <h2 class="filter-title" >Arizona:</h2>
+              <h2 class="filter-title">Arizona:</h2>
               <ul>
-                <li  class="popover-list">Page</li>
-                <li  class="popover-list">Page2</li>
+                <li class="popover-list">Page</li>
+                <li class="popover-list">Page2</li>
               </ul>
               <h2 class="filter-title">California:</h2>
               <ul>
-                <li  class="popover-list">San Francisco</li>
-                <li  class="popover-list">Los Altos</li>
+                <li class="popover-list">San Francisco</li>
+                <li class="popover-list">Los Altos</li>
               </ul>
             </div>
           </div>
@@ -182,88 +182,88 @@
                 </div>
               </div>
             </article>
-            <article class="suite">
-              <div class="home-price">
-                <h2 class="places-name">A suite</h2>
-                <div class="price_by_night">$190</div>
-              </div>
-              <div class="information">
-                <div class="max_guest">
-                  <div class="guest-icon"></div>
-                  6 Guests
-                </div>
-                <div class="number_rooms">
-                  <div class="rooms-icon"></div>
-                  3 Bedrooms
-                </div>
-                <div class="number_bathrooms">
-                  <div class="bath-icon"></div>
-                  2 Bathrooms
-                </div>
-              </div>
-              <div class="user"><span class="owner">Owner:</span>Betty</div>
-              <div class="description">
-                Welcome to our charming suite, a tranquil oasis nestled in the
-                heart of the city. This tastefully decorated and cozy space
-                offers comfort and convenience for your stay. With its modern
-                amenities and thoughtfully designed layout, you'll feel right at
-                home. Unwind in the plush queen-sized bed, indulge in a relaxing
-                soak in the private ensuite bathroom's luxurious tub, and savor
-                a cup of coffee on the private balcony overlooking the bustling
-                streets. Whether you're here for business or leisure, our suite
-                provides the perfect blend of relaxation and accessibility,
-                ensuring a memorable stay in our vibrant city.
-              </div>
-              <div class="amenities-desc">
-                <h2 class="amenities-title">Amenities</h2>
-                <ul class="ulist">
-                  <li class="list">
-                    <div class="tv-icon"></div>
-                    TV
-                  </li>
-                  <li class="list">
-                    <div class="wifi-icon"></div>
-                    WiFi
-                  </li>
-                </ul>
-              </div>
-              <div class="reviews">
-                <h2 class="review-title">3 Reviews</h2>
-                <ul class="review-ulist">
-                  <li class="review-list">
-                    <h3 class="review-head">From Laila the 15th Mars 2023</h3>
-                    <p class="review-p">Incredible place. 5 stars!</p>
-                  </li>
-                  <li class="review-list">
-                    <h3 class="review-head">From Betty the 4th January 2019</h3>
-                    <p class="review-p">
-                      I recently had the pleasure of staying in this fantastic
-                      suite through Airbnb, and I must say, it exceeded all my
-                      expectations. From the moment I walked in, I was impressed
-                      by the attention to detail and the thoughtfully designed
-                      space.
-                    </p>
-                  </li>
-                  <li class="review-list">
-                    <h3 class="review-head">
-                      From Badreddine the 20th December 2019
-                    </h3>
-                    <p class="review-p">
-                      Absolutely loved my stay at this Airbnb suite! The
-                      attention to detail in the design and furnishings was
-                      impressive, creating a cozy yet stylish atmosphere. The
-                      suite's prime location made it incredibly convenient to
-                      explore the city's attractions and dining options. The
-                      host's hospitality was exceptional, with quick and helpful
-                      communication. I couldn't have asked for a better
-                      experience and would highly recommend this suite to anyone
-                      looking for a comfortable and well-situated getaway.
-                    </p>
-                  </li>
-                </ul>
-              </div>
-            </article>
           </div>
+          <article class="suite">
+            <div class="home-price">
+              <h2 class="places-name">A suite</h2>
+              <div class="price_by_night">$190</div>
+            </div>
+            <div class="information">
+              <div class="max_guest">
+                <div class="guest-icon"></div>
+                6 Guests
+              </div>
+              <div class="number_rooms">
+                <div class="rooms-icon"></div>
+                3 Bedrooms
+              </div>
+              <div class="number_bathrooms">
+                <div class="bath-icon"></div>
+                2 Bathrooms
+              </div>
+            </div>
+            <div class="user"><span class="owner">Owner:</span>Betty</div>
+            <div class="description">
+              Welcome to our charming suite, a tranquil oasis nestled in the
+              heart of the city. This tastefully decorated and cozy space offers
+              comfort and convenience for your stay. With its modern amenities
+              and thoughtfully designed layout, you'll feel right at home.
+              Unwind in the plush queen-sized bed, indulge in a relaxing soak in
+              the private ensuite bathroom's luxurious tub, and savor a cup of
+              coffee on the private balcony overlooking the bustling streets.
+              Whether you're here for business or leisure, our suite provides
+              the perfect blend of relaxation and accessibility, ensuring a
+              memorable stay in our vibrant city.
+            </div>
+            <div class="amenities-desc">
+              <h2 class="amenities-title">Amenities</h2>
+              <ul class="ulist">
+                <li class="list">
+                  <div class="tv-icon"></div>
+                  TV
+                </li>
+                <li class="list">
+                  <div class="wifi-icon"></div>
+                  WiFi
+                </li>
+              </ul>
+            </div>
+            <div class="reviews">
+              <h2 class="review-title">3 Reviews</h2>
+              <ul class="review-ulist">
+                <li class="review-list">
+                  <h3 class="review-head">From Laila the 15th Mars 2023</h3>
+                  <p class="review-p">Incredible place. 5 stars!</p>
+                </li>
+                <li class="review-list">
+                  <h3 class="review-head">From Betty the 4th January 2019</h3>
+                  <p class="review-p">
+                    I recently had the pleasure of staying in this fantastic
+                    suite through Airbnb, and I must say, it exceeded all my
+                    expectations. From the moment I walked in, I was impressed
+                    by the attention to detail and the thoughtfully designed
+                    space.
+                  </p>
+                </li>
+                <li class="review-list">
+                  <h3 class="review-head">
+                    From Badreddine the 20th December 2019
+                  </h3>
+                  <p class="review-p">
+                    Absolutely loved my stay at this Airbnb suite! The attention
+                    to detail in the design and furnishings was impressive,
+                    creating a cozy yet stylish atmosphere. The suite's prime
+                    location made it incredibly convenient to explore the city's
+                    attractions and dining options. The host's hospitality was
+                    exceptional, with quick and helpful communication. I
+                    couldn't have asked for a better experience and would highly
+                    recommend this suite to anyone looking for a comfortable and
+                    well-situated getaway.
+                  </p>
+                </li>
+              </ul>
+            </div>
+          </article>
         </section>
       </div>
     </main>
